deploy_on_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operator-api-service
spec:
  selector:
    app: operator-api
  ports:
    - port: 8050
      protocol: TCP
